Fixed availability checker alert message styling

--- a/templates/directives/availability-form.html
+++ b/templates/directives/availability-form.html
@@ -1,4 +1,6 @@
-<aside class="mx-auto alert {{response.class}}" ng-hide="response == null">{{response.text}}</aside>
+<aside class="col-12 mx-auto">
+  <div class="col-md-6 text-center mx-auto alert {{response.class}}" ng-hide="response == null">{{response.text}}</div>
+</aside>
 
 <div class="col-md-6 mx-auto">
   <form name="availabilityForm" data-ng-submit="submitForm()" novalidate>
